# iperf

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml
src/: cli.rs  cmd_config.rs  cmd_run.rs  cmd_watch.rs  config.rs  error.rs  main.rs
src/backend/: mod.rs  openai.rs  sglang.rs  vllm.rs
src/benchmark/: mod.rs  runner.rs
src/download/: README.md  mod.rs
src/hub/: README.md  mod.rs
src/metrics/: mod.rs  stats.rs
src/report/: mod.rs
src/watch/: README.md  gpu_collector.rs  infer_collector.rs  mod.rs  nsys_collector.rs  nvidia_smi.rs  prometheus.rs  types.rs
