[package]
name = "iperf"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "AI inference backend performance benchmark"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.17"
indicatif = "0.17"
futures-util = "0.3"
bytes = "1"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }

[profile.release]
lto = true
strip = true
